--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -28,6 +28,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install package
       run: |
+        # FIXME: Remove this line when gwpy supports matplotlib 3.10
+        conda install -c conda-forge "matplotlib<3.10"
         python -m pip install .
         conda list --show-channel-urls
     # - name: Run precommits
