--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,13 +19,28 @@ concurrency:
 jobs:
   build:
 
+    name: ${{ matrix.python.name }} unit tests
     runs-on: ubuntu-latest
-    container: ghcr.io/bilby-dev/bilby-python311:latest
+    container: ghcr.io/bilby-dev/bilby-python${{ matrix.python.short-version }}:latest
     strategy:
       fail-fast: false
+      matrix:
+        python:
+          - name: Python 3.10
+            version: 3.10
+            short-version: 310
+          - name: Python 3.11
+            version: 3.11
+            short-version: 311
+          - name: Python 3.12
+            version: 3.12
+            short-version: 312
 
     steps:
     - uses: actions/checkout@v3
+    - name: Activate environment
+      run: |
+        conda activate python${{ matrix.python.short-version }}
     - name: Install package
       run: |
         # FIXME: Remove this line when gwpy supports matplotlib 3.10
