--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -40,7 +40,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Activate environment
       run: |
-        conda activate python${{ matrix.python.short-version }}
+        source activate python${{ matrix.python.short-version }}
     - name: Install package
       run: |
         # FIXME: Remove this line when gwpy supports matplotlib 3.10
