--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -40,7 +40,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Activate environment
       run: |
-        source activate python${{ matrix.python.short-version }}
+        source /opt/conda/bin/activate python${{ matrix.python.short-version }}
+        conda list --show-channel-urls
       shell: bash
     - name: Install package
       run: |
