BLD: add pytest-rerunfailures to optional requirements and containers

--- a/containers/env-template.yml
+++ b/containers/env-template.yml
@@ -22,6 +22,7 @@ dependencies:
   - black
   - pytest-cov
   - pytest-requires
+  - pytest-rerunfailures
   - conda-forge::arviz
   - parameterized
   - scikit-image
