Update the workflow

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -57,7 +57,23 @@ jobs:
     #     pre-commit run --all-files --verbose --show-diff-on-failure
     - name: Run unit tests
       run: |
-        pytest --cov=bilby --durations 10
+        pytest --cov=bilby --cov-report=xml --cov-report=term --durations 10
     - name: Run sampler tests
       run: |
         pytest test/integration/sampler_run_test.py --durations 10 -v
+    - name: Generate coverage badge
+      if: matrix.python.short-version == '312' && github.ref == 'refs/heads/main'
+      run: |
+        source $CONDA_PATH/bin/activate python${{ matrix.python.short-version }}
+        pip install coverage-badge
+        coverage-badge -o coverage.svg
+      shell: bash
+    - name: Commit coverage badge
+      if: matrix.python.short-version == '312' && github.ref == 'refs/heads/main'
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add coverage.svg || exit 0
+        git diff --staged --quiet || git commit -m "Update coverage badge"
+        git push || exit 0
+      shell: bash
